ka1/kube1/services/overleaf/overleaf-sharelatex.yaml
apiVersion: v1
kind: Service
metadata:
  name: overleaf-sharelatex
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: overleaf-sharelatex
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overleaf-sharelatex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overleaf-sharelatex
  template:
    metadata:
      labels:
        app: overleaf-sharelatex
    spec:
      hostname: overleaf-sharelatex
      enableServiceLinks: false
      containers:
        - name: overleaf-sharelatex
          image: ghcr.io/michelbrodatzki/brodatzki.net/ka1/sharelatex:main
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sharelatex-data
              mountPath: /var/lib/overleaf
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: sharelatex-data
          nfs:
            server: storage1.ka1.brodatzki.network
            path: "/mnt/pool1/appdata/overleaf"
