ka1/kube1/services/overleaf/overleaf-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: overleaf-redis
spec:
  ports:
    - port: 6379
  selector:
    app: overleaf-redis
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sharelatex-to-redis
spec:
  podSelector:
    matchLabels:
      app: overleaf-redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: overleaf-sharelatex
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: overleaf-redis
spec:
  selector:
    matchLabels:
      app: overleaf-redis
  template:
    metadata:
      labels:
        app: overleaf-redis
    spec:
      hostname: overleaf-redis
      containers:
        - name: overleaf-redis
          image: redis:6.2
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: overleaf-redis-pvc
